crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__invalid-pyproject-toml_bleach.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF200 Failed to parse pyproject.toml: after parsing `1.1.0`, found `<1.2`, which is not part of a valid version
tinycss2>=1.1.0<1.2
        ^^^^^^^^^^^
 --> pyproject.toml:5:16
  |
3 |   version = "0.1.0"
4 |   # There's a comma missing here
5 |   dependencies = [
  |  ________________^
6 | |   "tinycss2>=1.1.0<1.2",
7 | | ]
  | |_^
